<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedResources">

    <string name="testpress_products">Products</string>

    <string name="testpress_no_products">No Products</string>
    <string name="testpress_no_products_description">There are no products to purchase right now.</string>
    <string name="testpress_error_loading_products">Loading Products failed</string>
    <string name="testpress_no_product_found">Product not found!</string>
    <string name="testpress_no_product_found_description">This product might be removed or not yet in store</string>

    <string name="testpress_error_ordering">Ordering Products failed</string>
    <string name="testpress_error_confirm_order">Confirming order failed</string>

    <plurals name="exams_count">
        <item quantity="one">1 Exam</item>
        <item quantity="other">%d Exams</item>
    </plurals>
    <plurals name="documents_count">
        <item quantity="one">1 Document</item>
        <item quantity="other">%d Documents</item>
    </plurals>

    <string name="testpress_no_description">No description available</string>

    <string name="testpress_shipping_address">Shipping Address</string>
    <string name="testpress_want_to_cancel_order">Do you really want to cancel the order ?</string>

    <string name="testpress_payment_method">Choose Payment Method</string>
    <string name="testpress_credit_card">Credit / Debit Card</string>
    <string name="testpress_net_banking">Net Banking</string>
    <string name="testpress_amount_payable">Total payable including processing fees</string>
    <string name="testpress_select_option">Select Option</string>

    <string name="testpress_card_number">Card Number</string>
    <string name="testpress_make_payment">Make Payment</string>

    <string name="testpress_want_to_cancel">Do you want to cancel your payment process?</string>

    <string name="testpress_this_field_is_required">This filed is required</string>
    <string name="testpress_invalid_month">Invalid month</string>
    <string name="testpress_invalid_year">Invalid year</string>
    <string name="testpress_invalid_cvv">Invalid CVV</string>

    <string name="testpress_enter_details">Enter Details</string>
    <string name="testpress_select_bank">Select Bank</string>
    <string name="testpress_complete_payment">Complete Payment</string>

    <string name="testpress_payment_completed">Payment Successfully Completed</string>
    <string name="testpress_thanks_for_purchasing">Thank you for Purchasing</string>
    <string name="testpress_books_message">Books will be Delivered to you shortly</string>
    <string name="testpress_continue_purchase">Continue Purchase</string>
    <string name="testpress_take_exam">Take Exam</string>
    <string name="testpress_goto_home">Goto Home</string>

    <string name="testpress_order_id">Order Id: %s</string>
    <string name="testpress_amount">Amount: ₹ %s</string>
    <string name="testpress_check_your_mail">Further Details check your mail\n(%s)</string>

    <string name="testpress_payment_status">Payment Status</string>

    <string name="testpress_have_access_code">Have Access Code?</string>

    <string name="no_course_title">No courses available to enroll right now</string>
    <string name="no_course_description">Please do comeback later to see if there are any.</string>

    <string name="testpress_product_categories">Product Categories</string>
    <string name="retry">Retry</string>
    <string name="buy_now_button_text">Buy Now</string>
    <string name="testpress_already_enrolled">Enrolled</string>
    <string name="product_thumbnail_description">Product thumbnail image</string>
    <string name="testpress_offer_applied_name">Offer applied: %1$s</string>

    <string name="installment_click_to_see_plans">Pay in installments</string>
    <string name="installment_click_to_see">View installments</string>
    <string name="installment_choose_a_plan">Choose a Plan</string>
    <string name="installment_plan_subtitle">Installment plans are calculated based on the original price of ₹%1$s.</string>
    <string name="installment_pay_button_label">Pay %1$s Installment</string>
    <string name="installment_label">%1$s Installment</string>
    <string name="installment_due_on">due on %1$s</string>
    <string name="testpress_amount_with_symbol">₹%1$s</string>

    <plurals name="valid_for_days">
        <item quantity="one">Valid for %d day</item>
        <item quantity="other">Valid for %d days</item>
    </plurals>

    <string name="valid_till">Valid till %1$s</string>

</resources>
