<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/testpress_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar"
        tools:ignore="UnknownIdInLayout">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/testpress_success_tick"
                />

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/testpress_payment_completed"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/testpress_green_success"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:text="@string/testpress_thanks_for_purchasing"
                android:textSize="16sp"
                android:textColor="@color/testpress_black"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/order_id"
                android:textSize="15sp"
                android:text="Order Id: 2123456"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/testpress_black"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:id="@+id/amount"
                android:textSize="15sp"
                android:text="Amount: ₹ 2000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/testpress_black"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/book_message"
                android:textSize="15sp"
                android:text="@string/testpress_books_message"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/testpress_black"
                />

            <TextView
                android:id="@+id/further_details"
                android:textSize="15sp"
                android:text="Further Details check your mail\n(support@testpress.in)"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/testpress_black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                >

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/TestpressButton"
                    android:id="@+id/continue_button"
                    android:layout_width="match_parent"
                    android:text="@string/testpress_continue_purchase"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    style="@style/TestpressButton"
                    android:id="@+id/home_button"
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/testpress_goto_home"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>